# Rotation-Lock

./: .gitignore  LICENSE  README.md  gen-icon.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: lock_green_64.rgba  lock_red_64.rgba
src-tauri/src/: elevation.rs  main.rs  sensor.rs  state.rs  tasksched.rs
