[package]
name = "rotation-lock"
version = "0.1.0"
edition = "2021"
description = "Force laptop mode on convertible Windows laptops"
authors = ["DYLO Gaming LLC <dylogamingofficial@gmail.com>"]
license = "LicenseRef-Proprietary"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Power",
    "Win32_System_LibraryLoader",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "rotation-lock"
path = "src/main.rs"
